fix: plug 700 for Raleway, spacing % to em, add font-weight for cards , font-style for adress

--- a/css/styless.css
+++ b/css/styless.css
@@ -23,9 +23,7 @@ body {
   font-family: 'Roboto', sans-serif;
   color: var(--main-text-color);
   font-size: 14px;
-  text-align: left;
-  vertical-align: top;
-  letter-spacing: 3%;
+  letter-spacing: 0.03em;
 
   background-color: var(--main-background-color);
 }
@@ -70,7 +68,7 @@ body {
   color: var(--main-text-color);
   font-weight: 500;
   line-height: calc(16 / 14);
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   text-decoration: none;
 }
 .auth-nav .link:hover,
@@ -89,7 +87,7 @@ body {
   font-size: 44px;
   line-height: calc(60 / 44);
   text-align: center;
-  letter-spacing: 6%;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 .order-button {
@@ -99,7 +97,7 @@ body {
   font-size: 16px;
   line-height: calc(30 / 16);
   text-align: center;
-  letter-spacing: 6%;
+  letter-spacing: 0.06em;
 
   background-color: var(--accent-color);
   cursor: pointer;
@@ -113,14 +111,14 @@ body {
 }
 .features-title {
   color: var(--title-text-color);
-  font-style: 700;
+  font-weight: 700;
   line-height: calc(16 / 14);
   text-transform: uppercase;
 }
 
 .team-title {
   color: var(--title-text-color);
-  font-style: 500;
+  font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
@@ -156,6 +154,7 @@ body {
 
 .adress {
   color: var(--main-title-color);
+  font-style: normal;
   line-height: calc(14 / 24);
 }
 .contact-link {
@@ -194,8 +193,10 @@ body {
 .cards-title {
   color: var(--title-text-color);
   font-weight: 700;
+  font-size: 18px;
   line-height: calc(36 / 18);
 }
 .cards-text {
+  font-size: 16px;
   line-height: calc(30 / 16);
 }
